--- a/devicepluginknx.json
+++ b/devicepluginknx.json
@@ -54,8 +54,8 @@
                 },
                 {
                     "id": "943e1329-cf5f-4759-94b3-141b6d3ce0ba",
-                    "name": "knxSwitch",
-                    "displayName": "Knx switch",
+                    "name": "knxGenericSwitch",
+                    "displayName": "Knx generic switch",
                     "setupMethod": "JustAdd",
                     "createMethods": ["auto"],
                     "interfaces": [ "power", "connectable" ],
@@ -95,12 +95,19 @@
                             "defaultValue": false,
                             "writable": true
                         }
+                    ],
+                    "actionTypes": [
+                        {
+                            "id": "7ad6cea9-993c-4e09-aeee-348948425bc6",
+                            "name": "read",
+                            "displayName": "Read value"
+                        }
                     ]
                 },
                 {
                     "id": "7fd223fb-002f-4ab7-b77e-1073576f9241",
-                    "name": "knxShutter",
-                    "displayName": "Knx shutter",
+                    "name": "knxGenericUpDown",
+                    "displayName": "Knx generic UpDown",
                     "setupMethod": "JustAdd",
                     "createMethods": ["auto"],
                     "interfaces": [ "simpleclosable", "connectable" ],
@@ -135,12 +142,249 @@
                         {
                             "id": "5f1d6f15-6874-485e-a0ca-7bbd397ea25f",
                             "name": "open",
-                            "displayName": "Open"
+                            "displayName": "Up"
                         },
                         {
                             "id": "f3c0f798-ccaa-4943-975d-736dc09f5850",
                             "name": "close",
+                            "displayName": "Down"
+                        },
+                        {
+                            "id": "4bca01af-8a15-430a-a63c-92d3d51a69d0",
+                            "name": "read",
+                            "displayName": "Read value"
+                        }
+                    ]
+                },
+                {
+                    "id": "9b24c5ad-a36f-42d0-8489-275935149894",
+                    "name": "knxGenericScaling",
+                    "displayName": "Knx generic scale",
+                    "setupMethod": "JustAdd",
+                    "createMethods": ["auto"],
+                    "interfaces": [ "connectable" ],
+                    "basicTags": [ ],
+                    "paramTypes": [
+                        {
+                            "id": "2d984fc0-daa5-45d4-aee0-e46a74d5d905",
+                            "name": "knxName",
+                            "displayName": "Knx name",
+                            "type": "QString",
+                            "defaultValue": "Internal name"
+                        },
+                        {
+                            "id": "d3558e8d-3f33-4276-977e-a02d23d0d985",
+                            "name": "knxAddress",
+                            "displayName": "Knx address",
+                            "type": "QString",
+                            "defaultValue": "0/0/1"
+                        }
+                    ],
+                    "stateTypes": [
+                        {
+                            "id": "8b912679-d42c-48cc-834d-cdea68f44e1e",
+                            "name": "connected",
+                            "displayName": "Connected",
+                            "displayNameEvent": "Connected changed",
+                            "type": "bool",
+                            "defaultValue": false
+                        },
+                        {
+                            "id": "aa8f8366-b65a-45e3-a10c-9f31b8f6d189",
+                            "name": "scale",
+                            "displayName": "Scale",
+                            "displayNameEvent": "Scale changed",
+                            "displayNameAction": "Set scale",
+                            "minValue": 0,
+                            "maxValue": 100,
+                            "defaultValue": 0,
+                            "type": "int",
+                            "writable": true
+                        }
+                    ]
+                },
+                {
+                    "id": "fef0f771-cd90-4f27-8538-59c4eb5acb35",
+                    "name": "knxShutter",
+                    "displayName": "Knx shutter",
+                    "setupMethod": "JustAdd",
+                    "createMethods": ["user"],
+                    "interfaces": [ "closable", "connectable" ],
+                    "basicTags": [ ],
+                    "paramTypes": [
+                        {
+                            "id": "6ce97eeb-37d9-4980-963d-f3ca4084e189",
+                            "name": "address",
+                            "displayName": "Server address",
+                            "type": "QString",
+                            "inputType": "IPv4Address",
+                            "defaultValue": "192.168.8.140"
+                        },
+                        {
+                            "id": "881461a9-e38a-4305-bad4-9770c204db54",
+                            "name": "knxAddressUpDown",
+                            "displayName": "Knx address UpDown",
+                            "type": "QString",
+                            "defaultValue": "1/0/0"
+                        },
+                        {
+                            "id": "94991675-3b8d-438e-acfa-bb8694b4ccdb",
+                            "name": "knxAddressStep",
+                            "displayName": "Knx address step",
+                            "type": "QString",
+                            "defaultValue": "1/1/0"
+                        }
+                    ],
+                    "stateTypes": [
+                        {
+                            "id": "0a2f783b-3f2c-45d2-8b04-7e317127c65b",
+                            "name": "connected",
+                            "displayName": "Connected",
+                            "displayNameEvent": "Connected changed",
+                            "type": "bool",
+                            "defaultValue": false
+                        }
+                    ],
+                    "actionTypes": [
+                        {
+                            "id": "f46af15e-5f9b-4d34-bacc-6e0f220caf5d",
+                            "name": "open",
+                            "displayName": "Open"
+                        },
+                        {
+                            "id": "178021d3-3916-4cba-812d-a010953d6311",
+                            "name": "close",
                             "displayName": "Close"
+                        },
+                        {
+                            "id": "3f133a78-c75e-48a6-990e-d2ace96ffdae",
+                            "name": "stop",
+                            "displayName": "Stop"
+                        }
+                    ]
+                },
+                {
+                    "id": "34582d5d-8755-41f3-9eb5-43898466d86f",
+                    "name": "knxLight",
+                    "displayName": "Knx light",
+                    "setupMethod": "JustAdd",
+                    "createMethods": ["user"],
+                    "interfaces": [ "light", "connectable" ],
+                    "basicTags": [ ],
+                    "paramTypes": [
+                        {
+                            "id": "c1204f72-f0a1-42cd-a579-596bae4d0de7",
+                            "name": "address",
+                            "displayName": "Server address",
+                            "type": "QString",
+                            "inputType": "IPv4Address",
+                            "defaultValue": "192.168.8.140"
+                        },
+                        {
+                            "id": "97abac83-54ca-477f-b1c7-6f5ebaa79102",
+                            "name": "knxAddress",
+                            "displayName": "Knx address",
+                            "type": "QString",
+                            "defaultValue": "1/0/0"
+                        }
+                    ],
+                    "stateTypes": [
+                        {
+                            "id": "1a39109f-d1d4-45e8-832a-d94b9bc90c1b",
+                            "name": "connected",
+                            "displayName": "Connected",
+                            "displayNameEvent": "Connected changed",
+                            "type": "bool",
+                            "defaultValue": false
+                        },
+                        {
+                            "id": "b6fcc7fc-345c-40cf-88ab-698391e584d9",
+                            "name": "power",
+                            "displayName": "Power",
+                            "displayNameEvent": "Power changed",
+                            "displayNameAction": "Set power",
+                            "type": "bool",
+                            "defaultValue": false,
+                            "writable": true
+                        }
+                    ],
+                    "actionTypes": [
+                        {
+                            "id": "7510dada-5be0-4c66-baa3-4d03cf13289e",
+                            "name": "read",
+                            "displayName": "Read value"
+                        }
+                    ]
+                },
+                {
+                    "id": "9debbc19-538b-4ad2-9831-8bc93649cdbd",
+                    "name": "knxDimmableLight",
+                    "displayName": "Knx dimmable light",
+                    "setupMethod": "JustAdd",
+                    "createMethods": ["user"],
+                    "interfaces": [ "dimmablelight", "connectable" ],
+                    "basicTags": [ ],
+                    "paramTypes": [
+                        {
+                            "id": "c3176e2e-aeb8-40fa-a555-ae1620af7cc0",
+                            "name": "address",
+                            "displayName": "Server address",
+                            "type": "QString",
+                            "inputType": "IPv4Address",
+                            "defaultValue": "192.168.8.140"
+                        },
+                        {
+                            "id": "bf149d09-8014-4572-8170-28b48bb67c0c",
+                            "name": "knxSwitchAddress",
+                            "displayName": "Knx switch address",
+                            "type": "QString",
+                            "defaultValue": "1/0/0"
+                        },
+                        {
+                            "id": "c8728c5b-ac6e-4545-8ed7-bdd347757b12",
+                            "name": "knxScalingAddress",
+                            "displayName": "Knx scaling address",
+                            "type": "QString",
+                            "defaultValue": "1/0/0"
+                        }
+                    ],
+                    "stateTypes": [
+                        {
+                            "id": "f73c112c-2a22-4d6a-8f94-13a9aa4f3abf",
+                            "name": "connected",
+                            "displayName": "Connected",
+                            "displayNameEvent": "Connected changed",
+                            "type": "bool",
+                            "defaultValue": false
+                        },
+                        {
+                            "id": "b5dbb059-f408-468c-85e7-c052622d9a59",
+                            "name": "power",
+                            "displayName": "Power",
+                            "displayNameEvent": "Power changed",
+                            "displayNameAction": "Set power",
+                            "type": "bool",
+                            "defaultValue": false,
+                            "writable": true
+                        },
+                        {
+                            "id": "ce8fc00a-e8cb-4517-94a8-6e2b2ae71bf0",
+                            "name": "brightness",
+                            "displayName": "Brightness",
+                            "displayNameEvent": "Brightness changed",
+                            "displayNameAction": "Set brightness",
+                            "minValue": 0,
+                            "maxValue": 100,
+                            "defaultValue": 0,
+                            "type": "uint",
+                            "writable": true
+                        }
+                    ],
+                    "actionTypes": [
+                        {
+                            "id": "fa83f289-7bd2-4595-b4e4-52634f5098a1",
+                            "name": "read",
+                            "displayName": "Read value"
                         }
                     ]
                 }
@@ -148,6 +392,5 @@
         }
     ]
 }
-
 
 
