--- a/integrationpluginknx.json
+++ b/integrationpluginknx.json
@@ -16,16 +16,14 @@
             "name": "Knx",
             "displayName": "Knx",
             "id": "5971d18f-770c-4bc2-9025-8f2c70196f31",
-            "deviceClasses": [
+            "thingClasses": [
                 {
                     "id": "1322570a-cc4d-417c-90da-f24ccf59ebdb",
                     "name": "knxNetIpServer",
                     "displayName": "KNX NetIp server",
-                    "deviceIcon": "Gateway",
                     "setupMethod": "JustAdd",
                     "createMethods": ["user", "discovery"],
                     "interfaces": [ "gateway" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "6eec90a3-936c-4885-830e-a2500426ed64",
@@ -59,6 +57,13 @@
                             "type": "bool",
                             "defaultValue": false
                         }
+                    ],
+                    "actionTypes": [
+                        {
+                            "id": "d0845f3d-fe84-4eb8-a11f-fe48a6f7cae7",
+                            "name": "autoCreateDevices",
+                            "displayName": "Auto create devices from project file"
+                        }
                     ]
                 },
                 {
@@ -68,7 +73,6 @@
                     "setupMethod": "JustAdd",
                     "createMethods": ["auto"],
                     "interfaces": [ "power", "connectable" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "dc38bb80-3d84-4f40-8939-4fd1e8573f80",
@@ -120,7 +124,6 @@
                     "setupMethod": "JustAdd",
                     "createMethods": ["auto"],
                     "interfaces": [ "simpleclosable", "connectable" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "9c4c0a21-5a7b-4ab1-a096-6adea3d4a277",
@@ -167,7 +170,6 @@
                     "setupMethod": "JustAdd",
                     "createMethods": ["auto"],
                     "interfaces": [ "connectable" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "2d984fc0-daa5-45d4-aee0-e46a74d5d905",
@@ -214,7 +216,6 @@
                     "setupMethod": "JustAdd",
                     "createMethods": ["auto"],
                     "interfaces": [ "temperaturesensor", "connectable" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "51ed9d20-b716-434f-ac00-60f10580fd9e",
@@ -265,7 +266,6 @@
                     "setupMethod": "JustAdd",
                     "createMethods": ["auto"],
                     "interfaces": [ "lightsensor", "connectable" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "4f8419ee-d753-4894-b9b4-b1c3a3bc326a",
@@ -315,8 +315,7 @@
                     "displayName": "Knx generic wind speed sensor",
                     "setupMethod": "JustAdd",
                     "createMethods": ["auto"],
-                    "interfaces": [ "sensor", "connectable" ],
-                    "basicTags": [ ],
+                    "interfaces": [ "windspeedsensor", "connectable" ],
                     "paramTypes": [
                         {
                             "id": "8579633a-834f-4741-8105-bc3db55814b1",
@@ -361,13 +360,54 @@
                     ]
                 },
                 {
+                    "id": "c8591074-582a-45c9-9b56-04ab87ef408d",
+                    "name": "knxTrigger",
+                    "displayName": "Knx trigger",
+                    "setupMethod": "JustAdd",
+                    "createMethods": ["user"],
+                    "interfaces": [ "inputtrigger", "connectable" ],
+                    "paramTypes": [
+                        {
+                            "id": "fe697859-4cd1-49f8-b340-3794a3663f56",
+                            "name": "address",
+                            "displayName": "Server address",
+                            "type": "QString",
+                            "inputType": "IPv4Address",
+                            "defaultValue": "192.168.8.140"
+                        },
+                        {
+                            "id": "ab580353-98f4-4ea3-8e7a-91cc76043dac",
+                            "name": "knxAddress",
+                            "displayName": "Knx address",
+                            "type": "QString",
+                            "defaultValue": "1/0/0"
+                        }
+                    ],
+                    "stateTypes": [
+                        {
+                            "id": "53e9e279-e355-4fa3-9480-c83f676274f8",
+                            "name": "connected",
+                            "displayName": "Connected",
+                            "displayNameEvent": "Connected changed",
+                            "type": "bool",
+                            "defaultValue": false
+                        }
+                    ],
+                    "eventTypes": [
+                        {
+                            "id": "5f191a93-22e2-4528-abb7-efb2cd2ef4ad",
+                            "name": "triggered",
+                            "displayName": "Button clicked"
+                        }
+                    ]
+                },
+                {
                     "id": "fef0f771-cd90-4f27-8538-59c4eb5acb35",
                     "name": "knxShutter",
                     "displayName": "Knx shutter",
                     "setupMethod": "JustAdd",
-                    "createMethods": ["user"],
+                    "createMethods": ["user", "auto"],
                     "interfaces": [ "closable", "connectable" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "6ce97eeb-37d9-4980-963d-f3ca4084e189",
@@ -427,7 +467,6 @@
                     "setupMethod": "JustAdd",
                     "createMethods": ["user"],
                     "interfaces": [ "light", "connectable" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "c1204f72-f0a1-42cd-a579-596bae4d0de7",
@@ -478,9 +517,8 @@
                     "name": "knxDimmableLight",
                     "displayName": "Knx dimmable light",
                     "setupMethod": "JustAdd",
-                    "createMethods": ["user"],
+                    "createMethods": ["user", "auto"],
                     "interfaces": [ "dimmablelight", "connectable" ],
-                    "basicTags": [ ],
                     "paramTypes": [
                         {
                             "id": "c3176e2e-aeb8-40fa-a555-ae1620af7cc0",
